--- a/bbs.web/src/main/webapp/resource/css/common.css
+++ b/bbs.web/src/main/webapp/resource/css/common.css
@@ -2,6 +2,18 @@ a:hover {
   text-decoration:none;
 }
 
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+
 .commody-card {
   float: left;
   width: 220px;
