--- a/bbs.web/src/main/webapp/resource/jsp_component/topbar.css
+++ b/bbs.web/src/main/webapp/resource/jsp_component/topbar.css
@@ -36,12 +36,19 @@ a:hover {
 
 .notice-menu {
   width: 500px;
+  position: absolute;
+  z-index:101;
+  background-color: #fff;
+  box-shadow: 5px 5px 20px #aaa;
 }
 
 .notice-menu .nav-pills {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+}
+.notice-menu .nav-pills li {
+  flex-grow: 1;
+  text-align: center;	
 }
 
 #notice-menu-content {
@@ -57,7 +64,7 @@ a:hover {
 }
 .post-item {
   box-sizing: border-box;
-  height: 80px;
+  line-height: 60px;
   padding: 14px 0px 14px 5px;
   border-bottom:1px solid #f5f5f5;
   border-color: #e6e6e6;
